Fix background problem on iOS

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -4,6 +4,10 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+
+  @media screen and (max-width: 768px) {
+    background-attachment: scroll;
+  }
 }
 
 .flip-container {
